<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".SplashActivity">
    <!-- A clean background for the splash screen -->

    <ImageView
        android:id="@+id/iv_splash_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@mipmap/ic_launcher_round"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />
    <!-- Uses your app's round icon -->

    <TextView
        android:id="@+id/tv_powered_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/powered_by"
        android:textSize="12sp"
        android:textColor="#666666"
        android:layout_marginBottom="4dp"
        android:textDirection="rtl"
        android:gravity="end"
        app:layout_constraintBottom_toTopOf="@id/tv_software_version"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_software_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/software_version"
        android:textSize="12sp"
        android:textColor="#666666"
        android:layout_marginBottom="16dp"
        android:textDirection="rtl"
        android:gravity="end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

